--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8" />
-  <title>Arjin Trulhi – HyperFollow</title>
-  <style>
-    html,body {margin:0;height:100%;}
-    iframe {border:0;width:100%;height:100%;}
-  </style>
-</head>
-<body>
-  <iframe src="https://hyperfollow.com/arjintrulhi"></iframe>
-</body>
-</html>
+<iframe 
+  width="100%" 
+  height="166" 
+  scrolling="no" 
+  frameborder="no" 
+  src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/YOUR-USERNAME/YOUR-TRACK&color=%23ff5500&inverse=false&auto_play=false&show_user=true">
+</iframe>
+<div style="text-align:center; margin-top:20px;">
+  <a 
+    href="https://hyperfollow.com/arjintrulhi" 
+    target="_blank" 
+    style="
+      display:inline-block;
+      padding:12px 24px;
+      background:#000;
+      color:#fff;
+      text-decoration:none;
+      font-size:18px;
+      border-radius:8px;
+      font-weight:600;
+    ">
+    Listen on Any Platform
+  </a>
+</div>
