--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </iframe>
 <div style="text-align:center; margin-top:20px;">
   <a 
-    href="https://hyperfollow.com/arjintrulhi" 
+    href="https://distrokid.com/hyperfollow/arjintrulhi/winter-wonderland-afro-punjabi-remix" 
     target="_blank" 
     style="
       display:inline-block;
